--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 Firmware/Project/EWARM/SW_DRV_FOR_4500/Obj/
+Firmware/Project/EWARM/settings/
+Firmware/Project/EWARM/SW_DRV_FOR_4500/Exe/
+Firmware/Project/EWARM/SW_DRV_FOR_4500/List/
