add NVM_flasher project

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Firmware/Project/EWARM/SW_DRV_FOR_4500/Obj/
 Firmware/Project/EWARM/settings/
 Firmware/Project/EWARM/SW_DRV_FOR_4500/Exe/
 Firmware/Project/EWARM/SW_DRV_FOR_4500/List/
+NVM_Flasher/EWARM/NVM_Flasher/
