update NVM code

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Firmware/Project/EWARM/settings/
 Firmware/Project/EWARM/SW_DRV_FOR_4500/Exe/
 Firmware/Project/EWARM/SW_DRV_FOR_4500/List/
 NVM_Flasher/EWARM/NVM_Flasher/
+NVM_Flasher/EWARM/settings/
